--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,7 @@
 useDynLib(graphfast, .registration=TRUE)
+export(group_id)
+export(add_group_ids)
+export(print.group_id_result)
 importFrom(Rcpp, evalCpp)
 exportPattern("^[[:alpha:]]+")
 importFrom("methods", "new")
