--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: graphfast
 Type: Package
 Title: Fast Graph Connectivity Analysis Using C++
 Version: 0.1.0
-Author: Your Name
-Maintainer: Your Name <your.email@example.com>
+Author: Kyle Haynes
+Maintainer: Kyle Haynes
 Description: High-performance graph connectivity analysis for large-scale datasets.
     Uses optimized C++ algorithms via Rcpp to handle hundreds of millions of 
     node pairs efficiently. Provides functions for finding connected components,
