--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,11 @@ useDynLib(graphfast, .registration=TRUE)
 export(group_id)
 export(add_group_ids)
 export(print.group_id_result)
+export("%fgrepl%")
+export("%fgrepli%")
+export(multi_grepl_cpp)
+export(multi_grepl_any_cpp)
+export(multi_grepl_any_fast_cpp)
 importFrom(Rcpp, evalCpp)
 exportPattern("^[[:alpha:]]+")
 importFrom("methods", "new")
