Fix NAMESPACE exports - remove conflicting exportPattern

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,12 +1,23 @@
 useDynLib(graphfast, .registration=TRUE)
+importFrom(Rcpp, evalCpp)
+importFrom("methods", "new")
 export(group_id)
 export(add_group_ids)
 export(print.group_id_result)
 export("%fgrepl%")
 export("%fgrepli%")
+export(multi_grepl)
 export(multi_grepl_cpp)
 export(multi_grepl_any_cpp)
 export(multi_grepl_any_fast_cpp)
-importFrom(Rcpp, evalCpp)
-exportPattern("^[[:alpha:]]+")
-importFrom("methods", "new")
+export(add_component_column)
+export(are_connected)
+export(edge_components)
+export(filter_strings)
+export(find_connected_components)
+export(find_connected_components_large)
+export(find_connected_components_safe)
+export(get_edge_components)
+export(graph_statistics)
+export(group_edges)
+export(shortest_paths)
