--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,3 +17,6 @@ export(group_edges)
 export(group_id)
 export(multi_grepl)
 export(shortest_paths)
+importFrom(Rcpp,evalCpp)
+importFrom(methods,new)
+useDynLib(graphfast, .registration=TRUE)
