--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,8 @@ export(group_id)
 export(multi_grepl)
 export(shortest_paths)
 importFrom(Rcpp,evalCpp)
+importFrom(data.table,":=")
+importFrom(data.table,copy)
+importFrom(data.table,data.table)
 importFrom(methods,new)
 useDynLib(graphfast, .registration=TRUE)
