--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,7 @@ importFrom(Rcpp,evalCpp)
 importFrom(data.table,":=")
 importFrom(data.table,copy)
 importFrom(data.table,data.table)
+importFrom(data.table,is.data.table)
+importFrom(fastmatch,fmatch)
 importFrom(methods,new)
 useDynLib(graphfast, .registration=TRUE)
