--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,12 +16,14 @@ export(graph_statistics)
 export(group_edges)
 export(group_id)
 export(multi_grepl)
+export(set_group_id)
 export(shortest_paths)
 importFrom(Rcpp,evalCpp)
 importFrom(data.table,":=")
 importFrom(data.table,copy)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
+importFrom(data.table,melt)
 importFrom(fastmatch,fmatch)
 importFrom(methods,new)
 useDynLib(graphfast, .registration=TRUE)
